example project uploaded

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<html>
-<head>
-    <title>First test</title>
+---
+layout: default
+my_number: 5
+title: Vitek's TEST SITE
+---
 
-</head>
-<body>
-"Hello World!"
-<br>
-Test
-</body>
-</html>
+<h1>{{ "Hello World!" | downcase }}</h1>
